--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 leptos = { version = "0.5.2", features = ["csr", "nightly"] }
+leptos_router = { version = "0.5.2", features = ["csr", "nightly"] }
 serde = "1.0.190"
