edited build script in `package.json`

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp _redirects dist/",
     "serve": "vite preview"
   },
   "license": "MIT",
